--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(7, 14, 71);
+    background-color: rgb(54, 52, 52);
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -15,8 +15,8 @@ h1 {
     text-align: center;
     font-size: 5rem;
     padding-top: 100px;
-    color: aliceblue;
-    text-shadow: rgb(0, 0, 0) 0px 5px 15px;
+    color: rgb(255, 255, 255);
+    text-shadow: rgb(203, 201, 201) 2px 2px 2px;
 
 }
 .container {
@@ -29,8 +29,8 @@ h1 {
     border-radius: 1.5rem;
     margin-top: 80px;
     padding-top: 30px; 
-    box-shadow: rgb(0, 0, 0) 0px 5px 15px;
-}
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;}
+
 form input[type="number"], 
     form select {
         width: 30%; /* Largeur des champs */
