--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,66 +1,103 @@
-*{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 body {
-    background-color: rgb(54, 52, 52);
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
+  background-image: url('../docs/image/imageCochon-min.webp'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  height: 100vh; 
+  margin: 0; 
+  font-family: Arial, sans-serif; 
+  flex-direction: column;
+  justify-content: center;
 }
 h1 {
-    text-align: center;
-    font-size: 5rem;
-    padding-top: 100px;
-    color: rgb(255, 255, 255);
-    text-shadow: rgb(203, 201, 201) 2px 2px 2px;
-
+  text-align: center;
+  font-size: 4.5rem;
+  padding-top: 100px;
+  color: #868686;
+  text-shadow: 1px 1px 0px #f1f1f1, -1px 12px 10px rgba(0, 0, 0, 0.15), 0px 20px 14px rgba(0, 0, 0, 0.1), 0px 16px 8px rgba(0, 0, 0, 0.1);
 }
 .container {
-    background-color: rgb(245, 245, 245);
-    width: 60vw;
-    max-width:80rem;
-    height: 20rem;
-    text-align: center;
-    margin: 0 auto;
-    border-radius: 1.5rem;
-    margin-top: 80px;
-    padding-top: 30px; 
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;}
+  background-color: rgb(245, 245, 245);
+  width: 60vw;
+  max-width: 80rem;
+  height: 18rem;
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 1.5rem;
+  margin-top: 80px;
+  padding: 2rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
 
-form input[type="number"], 
-    form select {
-        width: 30%; /* Largeur des champs */
-        height: 60px; /* Hauteur des champs */
-        font-size: 20px; /* Taille de police */
-        padding: 10px; /* Espacement interne */
-        border: 1px solid #ccc; /* Bordure */
-        border-radius: 10px; /* Coins arrondis */
-    }
-    form button {
-        height: 50px; /* Hauteur du bouton */
-        font-size: 25px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        padding: 8px 20px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
+form input[type="number"],
+form select {
+  width: 30%; /* Largeur des champs */
+  height: 60px; /* Hauteur des champs */
+  font-size: 20px; /* Taille de police */
+  padding: 10px; /* Espacement interne */
+  border: 1px solid #030303; /* Bordure */
+  border-radius: 10px; /* Coins arrondis */
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+form button {
+  height: 60px; /* Hauteur du bouton */
+  font-size: 33px;
+  padding: 8px 20px;
+  margin-top: 20px;
+  background-color: #ffffff;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  color: rgb(0, 0, 0);
+  border-radius: 25px;
+  cursor: pointer;
+  border: none;
+}
 
-    form button:hover {
-        background-color: #0056b3;
-    }
-    form p {
-        display: inline-block; /* Pour qu'il soit sur la même ligne que les selects si nécessaire */
-        font-size: 30px; /* Taille de police */
-        font-weight: bold; /* Optionnel : met le texte en gras */
-    }
-    h2 {
-        font-size: 2.5rem;
-    }
+form button:hover {
+  height: 62px; /* Hauteur du bouton */
+  font-size: 34px;
+}
+form p {
+  display: inline-block; /* Pour qu'il soit sur la même ligne que les selects si nécessaire */
+  font-size: 30px; /* Taille de police */
+  font-weight: bold; /* Optionnel : met le texte en gras */
+}
+.containerConvertir {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+.deviceSource {
+  font-size: 20px;
+  color: #6b6666;
+}
+.deviceCible {
+  font-size: 50px;
+}
+.containerresultat {
+  display: flex; /* Utiliser un conteneur flexible */
+  flex-direction: column; /* Aligner les éléments horizontalement */
+}
+
+.deviceSource,
+.deviceCible {
+  margin: 5px 0px;
+  text-align: left; /* Aligner le texte à gauche */
+}
+.deviceSource .equal {
+    font-size: inherit; 
+    line-height: 1; 
+    vertical-align: middle; 
+}
